tests/invalid/unsupported_expression_namedexpr/main.py
def main() -> None:
    x = (y := 1)
